--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "jott",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  }
+    "name": "jott",
+    "module": "index.ts",
+    "type": "module",
+    "scripts": {
+        "start": "bun index.ts",
+        "dev": "bun --watch index.ts"
+    },
+    "devDependencies": {
+        "@types/bun": "latest"
+    },
+    "peerDependencies": {
+        "typescript": "^5.0.0"
+    },
+    "dependencies": {
+        "hono": "^4.3.2"
+    }
 }
