--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "jott",
-  "module": "index.ts",
-  "type": "module",
-  "scripts": {
-    "start": "bun index.ts",
-    "dev": "bun --watch index.ts"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "@hono/zod-validator": "^0.2.1",
-    "hono": "^4.3.2",
-    "zod": "^3.23.6"
-  }
+    "name": "jott",
+    "module": "server/index.ts",
+    "type": "module",
+    "scripts": {
+        "start": "bun server/index.ts",
+        "dev": "bun --watch server/index.ts"
+    },
+    "devDependencies": {
+        "@types/bun": "latest"
+    },
+    "peerDependencies": {
+        "typescript": "^5.0.0"
+    },
+    "dependencies": {
+        "@hono/zod-validator": "^0.2.1",
+        "hono": "^4.3.2",
+        "zod": "^3.23.6"
+    }
 }
