🧑‍💻 Changed ts import path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,7 @@
 
         // Paths
         "paths": {
-            "@/*": ["./server/*"],
-            "~/*": ["./src/*"]
+            "~/*": ["./server/*"]
         },
 
         // Some stricter flags (disabled by default)
