🧑‍💻 TS Path config for server dir

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 
         // Paths
         "paths": {
-            "~/*": ["./server/*"]
+            "@server/*": ["./server/*"]
         },
 
         // Some stricter flags (disabled by default)
