--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,7 +16,8 @@
 
         "baseUrl": ".",
         "paths": {
-            "~/*": ["./src/*"]
+            "~/*": ["./src/*"],
+            "@server/*": ["../server/*"]
         },
 
         /* Linting */
