--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.35.1",
+    "@tanstack/react-router": "^1.32.5",
+    "@tanstack/router-devtools": "^1.32.5",
+    "@tanstack/router-vite-plugin": "^1.32.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "react": "^18.2.0",
