--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-router": "^1.32.5",
+    "@tanstack/react-table": "^8.17.0",
     "@tanstack/router-devtools": "^1.32.5",
     "@tanstack/router-vite-plugin": "^1.32.2",
     "class-variance-authority": "^0.7.0",
