--- a/client/package.json
+++ b/client/package.json
@@ -11,18 +11,22 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-form": "^0.20.2",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-router": "^1.32.5",
     "@tanstack/react-table": "^8.17.0",
     "@tanstack/router-devtools": "^1.32.5",
     "@tanstack/router-vite-plugin": "^1.32.2",
+    "@tanstack/zod-form-adapter": "^0.20.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
